# LiteCue-Net

./: .gitattributes  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements-api-gpu.txt  requirements-api.txt  requirements.txt
api/: config.py  engine.py  main.py  processor.py
api/backends/: __init__.py  base.py  gradcam.py  litecuenet.py
api/core/: __init__.py  face_align.py  face_detector.py  normalize.py  retinaface_detector.py
api/model/: __init__.py  detector.py
configs/: train.yaml  train_generalization.yaml
configs/crosstest/: FF++_crosstest.yaml  celebdfv2_crosstest.yaml  ffiw10k_crosstest.yaml
configs/dataset/: celebdfv2.yaml  faceforensics.yaml  ffiw10k.yaml  multisource.yaml
doc/: LiteCue-Net FastAPI 推理服务.md  LiteCue-Net 使用 Gated-MLP 时序建模的思路.md  LiteCue-Net 数据集预处理指南.md  LiteCue-Net 模型总结.md  LiteCue-Net 跨数据集测试.md  LiteCue-Net 遮挡增强说明.md  LiteCue-Net 项目整体框架.md  使用指南.md  重构指南.md
models/: README.md
notebooks/: data_pipeline.ipynb  training_monitor.ipynb
scripts/: download_models.py
src/: __init__.py
src/data/: __init__.py  augmentation.py  balanced_sampler.py  dataset.py  sampler.py  transforms.py
src/losses/: __init__.py  focal_loss.py  generalization.py  loss.py
src/models/: __init__.py  detector.py
src/training/: __init__.py  trainer.py
src/utils/: __init__.py  checkpoint.py  logger.py  metrics.py
tools/: __init__.py  check_env.py  profile_api.py
tools/analysis/: ablation_report.py  crosstest_evaluate.py  distill_train.py  pretrain_temporal.py  video_demo_gradio.py
tools/preprocess/: build_dataset_index.py  (+4 more)
(+15 files in other folders)
