[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "litecue-net"
version = "1.0.0"
description = "LiteCue-Net — Lightweight Deepfake Detection Framework with Gated-MLP temporal modeling"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "timm>=1.0",
    "einops>=0.8",
    "opencv-python>=4.12",
    "pillow>=11.0",
    "insightface>=0.7",
    "numpy>=2.0",
    "scikit-learn>=1.7",
    "PyYAML>=6.0",
    "tqdm>=4.67",
    "colorlog>=6.10",
    "gradio>=6.0",
    "fastapi>=0.136",
    "uvicorn>=0.46",
    "python-multipart>=0.0.26",
    "pydantic>=2.12",
]

[tool.setuptools.packages.find]
include = ["src*", "tools*"]
exclude = ["*.tests", "*.tests.*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.md", "*.txt"]
